samples/_failures_safe/1761152807_33cc43_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15e943bc.c: In function ‘main’:
./samples/SAFE/__tmp_15e943bc.c:150:21: error: expected declaration or statement at end of input
  150 |                     printf("Matrix addition failed: dimension mismatch or integer overflow.\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_15e943bc.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15e943bc.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15e943bc.c:150:21: error: expected declaration or statement at end of input
